--- a/trunk/community/WebContent/webwork/richtexteditor/editor/dialog/fck_spellerpages/spellerpages/spellchecker.html
+++ b/trunk/community/WebContent/webwork/richtexteditor/editor/dialog/fck_spellerpages/spellerpages/spellchecker.html
@@ -1,5 +1,10 @@
+<html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<head>
+<title>Speller Pages</title>
+</head>
 
-<script>
+<script type="text/javascript">
 
 var wordWindow = null;
 var controlWindow = null;
@@ -58,12 +63,6 @@ function postWords() {
 	bodyDoc.close();
 }
 </script>
-
-<html>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<head>
-<title>Speller Pages</title>
-</head>
 <frameset rows="*,201" onLoad="postWords();">
 <frame src="blank.html">
 <frame src="controls.html">
